This is our second session

--- a/form.html
+++ b/form.html
@@ -19,6 +19,10 @@
         <label><input id="extrovert" type="radio" name="introvert-extrovert" value="extrovert">extrovert</label>
 
     </fieldset>
+    <fieldset>
+        <legend>What is the capital city of Germany?</legend>
+        <label
+    </fieldset>
     
 </body>
 </html>
