--- a/index.html
+++ b/index.html
@@ -25,6 +25,52 @@
 
 
     </nav>
+    <div class="hero">
+        <img src="images/WhatsApp Image 2025-02-14 at 20.42.38.jpeg" alt="this  is hero image" class="hero-image">
+    </div>
     
+    <div class="hero-content">
+        <h1>Code Wizards Games</h1>
+        <p>Welcome to Code Wizard Games</p>
+        <a href="form.html" class="btn">Wizard Games</a>
+    </div>
+
+    <div class="form-container">
+        <h2>Code Wizard Games</h2>
+        <p>Test your coding knowledge with this fun questionare</p>
+        <form class="form-start">
+
+        <!--This is the name field-->
+        <label>Your Name</label>
+        <input type="text" placeholder="enter your name" required>
+        
+        <!--This is the email field-->
+        <label>Your email</label>
+        <input type="text" placeholder="enter your email" required>
+
+        <!--This is the dropdown field-->
+        <label>What is your favorite programing language</label>
+        <select>
+            <option>Python</option>
+            <option>Java</option>
+            <option>JavaScript</option>
+            <option>C++</option>
+            <option>C</option>
+        </select>
+        <!--This is a radio button-->
+        <label>WHat is your favorite front end language</label>
+        <div class="radio-buttons">
+            <input type="radio" name="frontend" id="html">
+            <label for="html">html</label>
+
+            <input type="radio" name="frontend" id="css">
+            <label for="css">css</label>
+
+            <input type="radio" name="frontend" id="JavaScript">
+            <label for="JavaScript">JavaScript</label>
+        </div>
+
+        </form>
+    </div>
 </body>
 </html>
