--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <nav>
         <div class = "navlogo">
             <img src="" alt="">
-            <span>code CODE-WIZARDS</span>
+            <span>CODE-WIZARDS </span>
         </div>
 
         <ul>
-            <li><a href="">home</a></li>
-            <li><a href="">about us</a></li>
-            <li><a href="">games</a></li>
-            <li><a href="">gallery</a></li>
-            <li><a href="">contact us</a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Games</a></li>
+            <li><a href="">Gallery</a></li>
+            <li><a href="">Contact Us</a></li>
         </ul>
 
-        <a href="" class ="sign">login</a>
+        <a href="" class ="sign">Login</a>
 
 
     </nav>
